# FluS

./: .gitignore  CMakeLists.txt  Design_Doc.tex  Doxyfile  Introduction.tex  MathematicalModel.tex  ProposedWork.tex  README.md  Shortcuts.tex  ToDoAPC524.txt  mesh.cpp  mesh.h  mesh1d.cpp  mesh1d.h  mesh2d.cpp  mesh2d.h
DesignDoc/: .gitignore  APC524Bib.bib  APC524UML.vpd  Introduction.tex  Milestones.tex  ProposedWork.tex  README.md  Shortcuts.tex
src/: flus.cpp
src/FluS/: BC.cpp  BC1d.cpp  CMakeLists.txt  FluS.cpp  FluSConfig.cfg  FluSConfigAdvection.cfg  FluSConfigEuler.cfg  FluSPostProc.py  dynamic_variable.cpp  dynamic_variable.h  forward_euler.cpp  forward_euler.h  mesh.cpp  mesh.h  mesh1d.cpp  mesh1d.h  mesh1d_old.cpp  mesh2d.cpp  mesh2d.h  mesh2d_old.cpp  model.h  model_factory.hpp  preproc.cpp  preproc.h
src/FluS/mesh_old/: mesh1d_notest.cpp  mesh2d_node.h  mesh2d_old.h
src/FluS/models/: advection_1d.h  advection_2d.h  burgers_1d.cpp  burgers_1d.h  euler_1d.h  euler_2d.h
src/dev/: CMakeLists.txt  README.md  echo_advection.cpp  echo_euler.cpp  echo_libco.cpp  echo_mesh.cpp  echo_mesh2.cpp
src/exactRS/: CMakeLists.txt  README.md  ers.cpp  ers.h  ersWrap.py  testErs.cpp
src/extFunc/: externalMath.hpp
src/mocks/: advection_1d_mock.h  euler_1d_mock.h  mesh.cpp  mesh.h  mesh_mock.h  preproc_mock.cpp  preproc_mock.h
src/test/: CMakeLists.txt  data.txt  data2.txt  mesh.txt  mesh1d.txt  mesh2.txt  test_DynamicVar.cpp  test_NewtonHalley.cpp  test_advection.cpp  test_catch.cpp  test_dynamic_variable.cpp  test_euler.cpp  test_libco.cpp  test_mesh.cpp  test_mesh1d.cpp  test_mesh2d.cpp
src/tests/: CMakeLists.txt  testNewtonHalley.cpp  test_DynamicVar.cpp  test_NewtonHalley.cpp  test_advection.cpp  test_mesh.cpp
